--- a/404.html
+++ b/404.html
@@ -5,9 +5,7 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+  <h1>4 Ohhh 4, this page doesn't exist.</h1>
+  <h1>Try again. (404 error)</h1>
   <br/>
-
-  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" />
 </div>
